fix error - contrast

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 
 .subheader a {
     color: white;
+    background-color: black;
 }
 
 .just-added img {
